Quick fix to metric tile size on smaller screens

--- a/client/src/components/Overview/AnalyticsView/analyticStyles.css
+++ b/client/src/components/Overview/AnalyticsView/analyticStyles.css
@@ -99,5 +99,10 @@
 
   .metric, .double-metric {
     width: auto;
+    width: 260px;
+  }
+
+  .double-metric {
+    margin-right: 10px;
   }
 }
